Minor improvement